base/prod/matomo/auth-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matomo-auth
  namespace: prod
  labels:
    app: matomo
spec:
  tls:
  - hosts:
    - matomo.sdpaks.equinor.com
    secretName: matomo-tls
  rules:
    - host: matomo.sdpaks.equinor.com
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy-sdp
                port:
                  number: 4180
